fix: Redis 저장 시 toList() 사용으로 인한 immutable 리스트 직렬화 오류 해결
- Stream.toList()가 immutable 리스트를 반환하여 Redis 저장 시 Jackson 직렬화 에러 발생
- Collectors.toList()로 mutable 리스트(ArrayList)로 변경하여 타입 정보 누락 문제 해결
- Redis 조회/저장 과정에서 정상적인 역직렬화 가능하도록 수정